[tool.poetry]
name = "tuneinsight"
version = "1.0.0"
description = "Official Python SDK for the Tune Insight API. The current version is compatible with the same version of the API."
authors = ["Tune Insight SA"]
license = "Apache-2.0"
include = [
    "src/tuneinsight/api/**/*.py",
    "src/tuneinsight/api/api-checksum",
    "src/tuneinsight/cryptolib/build/*.so",
    "src/tuneinsight/cryptolib/build/*.dll",
    "src/tuneinsight/cryptolib/build/*.h"
]
readme = "src/tuneinsight/README.md"

[tool.poetry-dynamic-versioning]
enable = false
style = "pep440"
pattern = "^v(?P<base>\\d+\\.\\d+\\.\\d+)"
format = "{base}"

[tool.poetry.dependencies]
python = ">= 3.9,<4.0"
python-keycloak = "^3.9.0"
PyYAML = "^6.0"
notebook = "^6.4.11"
python-dotenv = "^0.21.0"
python-dateutil = "^2.8.0"
matplotlib = "^3.5.0"
typing-extensions = "^4.6.3"

# Required by ge_co_rest_api
httpx = ">=0.15.4,<0.28.0"
attrs = ">=21.3.0"
certifi = "^2024.07.04"
black = "24.2.0"
tqdm = "^4.66.4"

jupyter = "^1.1.1"
pandas = "^2.2.3"
jupyterlab = "4.2.5"

[tool.poetry.group.dev.dependencies]
selenium = "^4.9.1"
wheel = "^0.38.1"
docker = "^6.0.1"
pylint = "^2.13.2"
pyvcf3 = "^1.0.3" # For GWAS .vcf file parsing
pytest = "^8.1.1"

[tool.poetry.scripts]
test-ti-install = "tuneinsight.utils.test:test_install"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.black]
include = '\.pyi?$'
extend-exclude='''
(
    src/tuneinsight/api
)
'''
