[tool.poetry]
name = "tuneinsight"
version = "1.1.4"  # Ignored.
description = "Official Python SDK for the Tune Insight API. The current version is compatible with the same version of the API."
authors = ["Tune Insight SA"]
license = "Apache-2.0"
include = [
    "src/tuneinsight/api/**/*.py",
    "src/tuneinsight/api/api-checksum",
    "src/tuneinsight/cryptolib/build/*.so",
    "src/tuneinsight/cryptolib/build/*.dll",
    "src/tuneinsight/cryptolib/build/*.h"
]
readme = "src/tuneinsight/README.md"

[tool.poetry-dynamic-versioning]
enable = false
style = "pep440"
pattern = "^v(?P<base>\\d+\\.\\d+\\.\\d+)"
format = "{base}"

[tool.poetry.dependencies]
python = ">3.9.0,<3.9.1 || >3.9.1,<4.0"
python-keycloak = "*"
PyYAML = "^6.0"
python-dotenv = "^0.21.0"
python-dateutil = "^2.8.0"
matplotlib = "^3.5.0"
typing-extensions = "^4.6.3"
pandas = "^2.2.3"
tqdm = "^4.66.4"
ipython = "8.18.1"
black = "24.2.0"

# Required by the REST API models.
httpx = ">=0.15.4,<0.28.0"
attrs = ">=21.3.0"
certifi = "^2024.07.04"

# Minimal versions required to fix known vulnerabilities in imports.
requests = ">= 2.32.4"
jinja2 = "^3.1.6"
h11 = "^0.16.0"
cryptography = "^44.0.1"

# Extras for the "full" install (somewhat heavy packages).
notebook = { version = "^7.3.3", optional = true}
jupyter = { version = "^1.1.1", optional = true}
jupyterlab = { version = "^4.3.6", optional = true}
tornado = { version = "^6.5.0", optional = true}
jupyter-client = { version = "^8.6.3", optional = true}

[tool.poetry.group.dev.dependencies]
selenium = "^4.9.1"
wheel = "^0.38.1"
docker = "^6.0.1"
pylint = "^3.3.7"
pyvcf3 = "^1.0.3" # For GWAS .vcf file parsing
pytest = "^8.1.1"
jsonschema = "^4.24.0"

[tool.poetry.extras]
full = ["notebook", "jupyter", "jupyterlab", "tornado", "jupyter-client"]

[tool.poetry.scripts]
test-ti-install = "tuneinsight.utils.test:test_install"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.black]
include = '\.pyi?$'
extend-exclude='''
(
    src/tuneinsight/api
)
'''
